@@ -50,7 +50,6 @@ import java.util.function.Consumer;
 import java.util.function.Function;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 import static org.elasticsearch.test.hamcrest.ElasticsearchAssertions.assertAcked;
@@ -138,14 +137,14 @@ public class ConcurrentSeqNoVersioningIT extends AbstractDisruptionTestCase {
         List<Partition> partitions = IntStream.range(0, numberOfKeys)
             .mapToObj(i -> client().prepareIndex("test").setId("ID:" + i).setSource("value", -1).get())
             .map(response -> new Partition(response.getId(), new Version(response.getPrimaryTerm(), response.getSeqNo())))
-            .collect(Collectors.toList());
+            .toList();
 
         int threadCount = randomIntBetween(3, 20);
         CyclicBarrier roundBarrier = new CyclicBarrier(threadCount + 1); // +1 for main thread.
 
         List<CASUpdateThread> threads = IntStream.range(0, threadCount)
             .mapToObj(i -> new CASUpdateThread(i, roundBarrier, partitions, disruptTimeSeconds + 1))
-            .collect(Collectors.toList());
+            .toList();
 
         logger.info("--> Starting {} threads", threadCount);
         threads.forEach(Thread::start);
@@ -493,35 +492,10 @@ public class ConcurrentSeqNoVersioningIT extends AbstractDisruptionTestCase {
         }
     }
 
-    private static final class State {
-        private final Version safeVersion;
-        private final boolean lastFailed;
-
-        private State(Version safeVersion, boolean lastFailed) {
-            this.safeVersion = safeVersion;
-            this.lastFailed = lastFailed;
-        }
+    private record State(Version safeVersion, boolean lastFailed) {
 
         public State failed() {
             return lastFailed ? this : casFail(safeVersion);
-        }
-
-        @Override
-        public boolean equals(Object o) {
-            if (this == o) return true;
-            if (o == null || getClass() != o.getClass()) return false;
-            State that = (State) o;
-            return lastFailed == that.lastFailed && safeVersion.equals(that.safeVersion);
-        }
-
-        @Override
-        public int hashCode() {
-            return Objects.hash(safeVersion, lastFailed);
-        }
-
-        @Override
-        public String toString() {
-            return "State{" + "safeVersion=" + safeVersion + ", lastFailed=" + lastFailed + '}';
         }
     }
 
@@ -688,9 +662,9 @@ public class ConcurrentSeqNoVersioningIT extends AbstractDisruptionTestCase {
     }
 
     private static void writeEvent(LinearizabilityChecker.Event event, BytesStreamOutput output) throws IOException {
-        output.writeEnum(event.type);
-        output.writeNamedWriteable((NamedWriteable) event.value);
-        output.writeInt(event.id);
+        output.writeEnum(event.type());
+        output.writeNamedWriteable((NamedWriteable) event.value());
+        output.writeInt(event.id());
     }
 
     private static LinearizabilityChecker.Event readEvent(StreamInput input) throws IOException {
